# DMV

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
src/dmv/: __init__.py  categorization.py  classification_normalize.py  classification_recovery.py  cli.py  config.py  cost.py  debug_exclusions.py  document_types.py  logging_config.py  page_content.py  pdf_splitter.py  validation.py
src/dmv/consolidation/: __init__.py  field.py  groups.py  priority.py  rover.py  service.py
src/dmv/extraction/: __init__.py  fields.py  profiles.py  prompt.py  schemas.py  service.py
src/dmv/models/: __init__.py  classification.py  usage.py
src/dmv/output/: __init__.py  assemble.py  cover_letter.py  fill_pdf.py  formatting.py  mappings.py  service.py  tax_resolution.py  tax_stamp.py  values.py
src/dmv/preprocess/: __init__.py  classification_map.py  image_ops.py  (+4 more)
tests/: conftest.py  fakes.py  test_categorization.py  test_classification_map.py  test_classification_normalize.py  test_classification_recovery.py  test_cli.py  test_config.py  test_consolidation.py  test_cost.py  test_debug_exclusions.py  test_document_types.py  test_extraction_profiles.py  test_extraction_provider.py  test_extraction_service.py  test_filename.py  test_google_schema.py  test_image_ops.py  test_logging_config.py  test_models.py  test_openai_provider.py  test_output_packet.py  test_pdf_splitter.py  test_preprocess_modes.py  test_preprocess_pdf.py  test_preprocess_service.py  test_preprocess_verification.py  test_retry.py  test_tax_resolution.py  test_validation.py  test_vertex_provider.py
(+10 files in other folders)
