[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmv"
version = "0.1.0"
description = "CLI tool for processing DMV document PDFs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.68.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.0.0",
    "pymupdf>=1.24.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
dmv = "dmv.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
